fix: UI issue on table contents which is overlapping layout on docs page.

--- a/src/templates/page.scss
+++ b/src/templates/page.scss
@@ -661,3 +661,17 @@ code[class*="language-"] {
     @apply px-8; 
   }
 }
+
+table{
+  thead, tbody{
+    @apply w-full;
+    tr{
+      td, th{
+        word-wrap: break-word;
+        li{
+          @apply break-all w-full;
+        }
+      }
+    }
+  }
+}
